# TON-split-AI

./: .env.example  README.md  pyproject.toml
app/: main.py
app/api/: main.py
app/bot/handlers/: receipt.py  start.py
app/bot/keyboards/: common.py
app/bot/states/: receipt.py
app/core/: config.py  logging.py
app/db/: session.py
app/db/models/: __init__.py  receipt.py  split.py
app/services/ai/: client.py  prompts.py
app/services/payments/: ton.py
app/services/receipt/: parser.py  preprocess.py  schemas.py  validator.py
app/services/split/: engine.py  schemas.py
app/utils/: formatters.py
tests/: test_payments.py  test_split_regressions.py  test_validator.py
ton_split_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
